# xoxolarx-gear-academy

./: Cargo.toml
.github/workflows/: CI.yml  main.yml
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
test/: basic.rs
