[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0",features = ["debug"] }
pebbles-game-io.path = "io"

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" }
pebbles-game-io.path = "io"

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" }
pebbles-game-io.path = "io"